--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>考拉</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <link rel="icon" href="favicon.ico" />
     <link href="/dist/app.css" rel="stylesheet" type="text/css">
 </head>
 
